2000-07-30  Anthony Green  <green@redhat.com>
        * java/awt/Component.java: Add treeLock object.
        (getTreeLock): Implement.
        (isShowing): Implement.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35362 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-30  Anthony Green  <green@redhat.com>
+
+	* java/awt/Component.java: Add treeLock object.
+	(getTreeLock): Implement.
+	(isShowing): Implement.
+
 2000-07-30  Tom Tromey  <tromey@cygnus.com>
 
 	* java/awt/BorderLayout.java (BorderLayout()): New constructor.
