* java/awt/Component.java (toString): Implemented. 	* java/awt/Container.java (addImpl): Remove FIXME. Only call 	dispatchEvent() to dispatch the event. 	(removeImpl): Ditto.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35363 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2000-07-31  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* java/awt/Component.java (toString): Implemented.
+	* java/awt/Container.java (addImpl): Remove FIXME. Only call 
+	dispatchEvent() to dispatch the event.
+	(removeImpl): Ditto.
+
 2000-07-30  Anthony Green  <green@redhat.com>
 
 	* java/awt/Component.java: Add treeLock object.
