--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -3902,7 +3902,6 @@
   "
 {
   rtx pat;
-  operands[0] = gen_lowpart (SImode, operands[0]);
   /* In -fPIC mode the constructs like (const (unspec [symbol_ref]))
      may confuse gen_lowpart.  */
   if (GET_MODE (operands[0]) != Pmode)
@@ -3910,6 +3909,7 @@
       operands[1] = gen_lowpart (Pmode, operands[1]);
       operands[2] = gen_lowpart (Pmode, operands[2]);
     }
+  operands[0] = gen_lowpart (SImode, operands[0]);
   pat = gen_rtx_PLUS (Pmode, operands[1], operands[2]);
   if (Pmode != SImode)
     pat = gen_rtx_SUBREG (SImode, pat, 0);
@@ -6691,7 +6691,7 @@
 (define_insn "*ashlqi3_1_lea"
   [(set (match_operand:QI 0 "nonimmediate_operand" "=qm,r,r")
 	(ashift:QI (match_operand:QI 1 "nonimmediate_operand" "0,0,r")
-		   (match_operand:QI 2 "nonmemory_operand" "cI,cI,r")))
+		   (match_operand:QI 2 "nonmemory_operand" "cI,cI,M")))
    (clobber (reg:CC 17))]
   "!TARGET_PARTIAL_REG_STALL
    && ix86_binary_operator_ok (ASHIFT, QImode, operands)"
