--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-31  Kazu Hirata  <kazu@hxi.com>
+
+	* h8300.c (split_adds_subs): Rearrange code for conciseness.
+
 Mon Jul 31 12:27:55 MET DST 2000  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (addsi to lea splitter, ashlqi3_1_lea): Fix bugs
