--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-31  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-typeck.c (build_c_cast): Change -Wcast-qual pedwarn for
+	discarding qualifiers into a plain warning.
+
 2000-07-31  Kazu Hirata  <kazu@hxi.com>
 
 	* h8300.h (MODES_TIEABLE_P): Accept a combination of QImode and
