* gcc.dg/noncompile/voidparam-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35376 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-31  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/noncompile/voidparam-1.c: New test.
+
 2000-07-30  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.dg/c90-digraph-1.c: Don't xfail.
