--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jul 31 07:58:31 2000  Casper Dik <Casper.Dik@holland.sun.com>
+
+	* Makefile.in: Remove naked "^L".
+
 2000-07-13  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* lang-specs.h: Use the new named specs.  Remove unnecessary braces.
