2000-07-30  Anthony Green  <green@redhat.com>
        * config/ia64/crtbegin.asm (__EH_FRAME_BEGIN__): Align correctly.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35383 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-31  Anthony Green  <green@redhat.com>
+
+	* config/ia64/crtbegin.asm (__EH_FRAME_BEGIN__): Align correctly.
+
 2000-07-31  Jason McMullan  <jmcmullan@linuxcare.com>
 
 	* builtins.c (expand_builtin_apply): Don't defer pop during
