--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-31  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* lang-specs.h: Rename cpp to cpp0 and/or tradcpp to tradcpp0.
+
 Mon Jul 31 07:58:31 2000  Casper Dik <Casper.Dik@holland.sun.com>
 
 	* Makefile.in: Remove naked "^L".
