* lang-specs.h: Use %i in rule for .ii files.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35392 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-28  Jason Merrill  <jason@redhat.com>
+
+	* lang-specs.h: Use %i in rule for .ii files.
+
 2000-07-31  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* lang-specs.h: Rename cpp to cpp0 and/or tradcpp to tradcpp0.
