2000-07-31  Jakub Jelinek  <jakub@redhat.com>
	* cpplex.c (_cpp_get_line): If index is 0, return line 0 col 0.
	(_cpp_get_token): Don't macro expand a just pasted token if it
	was pasted at no_expand_level.

	* testsuite/gcc.dg/cpp/paste7.c: New test.

2000-07-31  Zack Weinberg  <zack@wolery.cumb.org>

	* cppmacro.c (find_param, count_params, save_expansion):
	Permit 'defined' as a macro parameter name.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35394 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,6 @@
 2000-07-31  Jakub Jelinek  <jakub@redhat.com>
 
+	* testsuite/gcc.dg/cpp/paste7.c: New test.
 	* gcc.dg/cpp/20000725-1.c: New test.
 
 2000-07-31  Zack Weinberg  <zack@wolery.cumb.org>
