--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-31  Richard Henderson  <rth@cygnus.com>
+
+	* tm.texi (Addressing Modes): Clarify PRE/POST_MODIFY descriptions.
+
 2000-07-31  Jakub Jelinek  <jakub@redhat.com>
 
 	* cpplex.c (_cpp_get_line): If index is 0, return line 0 col 0.
