--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-31  Geoff Keating  <geoffk@cygnus.com>
+
+	* flow.c (clear_log_links): Nuke global_live_at_start and
+	global_live_at_end data, since if the log_links stuff is invalid
+	so is global_live_at_*.
+
 2000-07-31  Richard Henderson  <rth@cygnus.com>
 
 	* tm.texi (Addressing Modes): Clarify PRE/POST_MODIFY descriptions.
