--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -130,6 +130,8 @@
 
 2000-07-31  Kazu Hirata  <kazu@hxi.com>
 
+	* h8300.md: Fix formatting.
+
 	* local-alloc.c: Fix formatting.
 
 	* h8300.c (get_shift_alg): Remove the variable alg.
