--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 31 21:14:49 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* gcc.c-torture/execute/20000731-1.c: New test.
+	* gcc.c-torture/execute/20000731-1.x: Expected to fail for i?86-*-*.
+
 2000-07-31  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/gcc.dg/cpp/paste7.c: New test.
