--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jul 31 20:35:50 2000  Denis Chertykov  <denisc@overta.ru>
+
+	* genpeep.c (main): Handle DEFINE_PEEPHOLE2.
+
 2000-07-31  Geoff Keating  <geoffk@cygnus.com>
 
 	* flow.c (clear_log_links): Nuke global_live_at_start and
